# cookiecutter-tuw-package

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  Justfile  Makefile  README.md  local-requirements.txt  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: test_coverage.yml  test_platforms.yml
{{cookiecutter.project_name}}/ci/: add-pypi-indices.sh  deploy-docker-image.sh  deploy-trunk-docker-image.sh  setup-approval-testdata.sh
{{cookiecutter.project_name}}/docker/: Dockerfile  trunk.Dockerfile
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_meta.py
