[project]
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}" }]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

{%- if cookiecutter.url %}
[project.urls]
Repository = "{{cookiecutter.url}}"
{%- endif %}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov"
]
trunk = []