[project]
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}" }]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

{%- if cookiecutter.url %}
[project.urls]
Repository = "{{cookiecutter.url}}"
{%- endif %}

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
exclude = ["tests"]
line-length = 79
lint.fixable = ["ALL"]
lint.select = ["ALL"]
lint.ignore = [
    "ANN401", # Any type in func args are not allowed
    "D203",   # no blank lines between class def and docstring
    "D213",   # multiline summary should start in first line
    "PGH",    # pygrep hooks are ignored
    "TD002",  # todo author assignment is ignored
    "TD003",  # todo issue assignment is ignored
    "T201",   # allow print statements
]

[tool.ruff.format]
line-ending = "auto"
docstring-code-line-length = 79

[tool.pytest.ini_options]
approvaltests_geo_data_root = "{{ cookiecutter.approvaltests_geo_data_root }}"
approvaltests_geo_input = "input/{{ cookiecutter.approvaldata_timestamp }}/"
approvaltests_geo_approved = "approved/{{ cookiecutter.approvaldata_timestamp }}/"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
major_version_zero = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

