[metadata]
name = {{cookiecutter.project_slug}}
version = attr: {{cookiecutter.project_slug}}.__version__
description = {{cookiecutter.project_description}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
long_description = file: README.md
{%- if cookiecutter.url %}
url = {{cookiecutter.url}}
{%- endif %}
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
